--- a/user/Dockerfile
+++ b/user/Dockerfile
@@ -1,13 +1,21 @@
 # https://hub.docker.com/_/php
-FROM php
+FROM debian
 
 RUN apt-get update && apt-get install -y apt-utils
 ###### Configuration PHP
 
+RUN apt-get install -y nginx php7.3-fpm
+
 # https://stackoverflow.com/questions/44983961/installing-postgres-driver-in-php7-fpm-docker-container
-RUN apt-get update && apt-get install -y libpq-dev
+RUN apt-get install -y libpq-dev
+
 RUN docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql
 RUN docker-php-ext-install pdo pdo_pgsql
+
+COPY nginx/lnpon.conf /etc/nginx/site-available/lnpon.conf
+COPY nginx/gateway_headers.conf /etc/nginx/snippets/gateway_headers.conf
+
+RUN ln -s /etc/nginx/site-available/lnpon.conf /etc/nginx/site-enabled/
 
 # https://www.postgresql.org/download/linux/ubuntu/
 RUN apt-get -y install postgresql
@@ -23,5 +31,6 @@ RUN /etc/init.d/postgresql start &&\
     createdb -O "www-data" user_db &&\
     psql -d user_db -c "\i /var/www/init.sql"
 
+# docker run -t -d lnpon_users /bin/bash
+CMD /etc/init.d/nginx start && /etc/init.d/postgresql start && bash
 
-CMD /etc/init.d/postgresql start
