--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3"
 services:
   users:
     build: ./user
-    restart: always
+    #restart: always
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
