--- a/user/nginx/lnpon.conf
+++ b/user/nginx/lnpon.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name _;
+    server_name localhost;
 
     root /var/www;
     index index.html index.php;
