--- a/user/nginx/default.conf
+++ b/user/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen       80 default_server;
+    listen       [::]:80 default_server;
 
     server_name localhost;
 
@@ -9,8 +9,8 @@ server {
 
     location ~ \.php$ {
         try_files $uri = 404;
-        include fastcgi.conf;
-        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+        #include fastcgi.conf;
+        fastcgi_pass user_php:9000;
         fastcgi_index index.php;
     }
 }
