--- a/post/nginx/default.conf
+++ b/post/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen       88 default_server;
-    listen       [::]:88 default_server;
+    listen       85 default_server;
+    listen       [::]:85 default_server;
 
     server_name localhost;
 
@@ -10,7 +10,7 @@ server {
     location ~ \.php$ {
         try_files $uri = 404;
         #include fastcgi.conf;
-        fastcgi_pass user_php:9000;
+        fastcgi_pass post_php:9000;
         fastcgi_index index.php;
     }
 }
