--- a/user/environment/prod.env
+++ b/user/environment/prod.env
@@ -1,3 +1,3 @@
-POSTGRES_DB="user_db"
-POSTGRES_USER="www-data"
-POSTGRES_PASSWORD="www-data"
+POSTGRES_DB=user_db
+POSTGRES_USER=www-data
+POSTGRES_PASSWORD=www-data
