--- a/users/nginx/default.conf
+++ b/users/nginx/default.conf
@@ -9,7 +9,7 @@ server {
 
     location ~ \.php$ {
         try_files $uri = 404;
-        fastcgi_pass user_php:9000;
+        fastcgi_pass users_php:9000;
         fastcgi_index index.php;
     }
 }
