--- a/posts/nginx/default.conf
+++ b/posts/nginx/default.conf
@@ -9,7 +9,7 @@ server {
 
     location ~ \.php$ {
         try_files $uri = 404;
-        fastcgi_pass post_php:9000;
+        fastcgi_pass posts_php:9000;
         fastcgi_index index.php;
     }
 }
