--- a/gateway/nginx/default.conf
+++ b/gateway/nginx/default.conf
@@ -8,15 +8,14 @@ server {
     index index.html index.php;
 
     location ~ \.php$ {
-        try_files $uri =404;
-        include fastcgi.conf;
-        fastcgi_pass unix:/var/run/php/php8.0-fpm.sock;
+        try_files $uri = 404;
+        fastcgi_pass gateway_php:9000;
         fastcgi_index index.php;
     }
 
     # ajouter les routes ici
     location /auth {
         #proxy_pass http://127.0.0.1:8000;
-        #include snippets/gateway_headers.conf
+        #include gateway_headers.conf
     }
 }
