--- a/posts/docker-compose.yml
+++ b/posts/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     image: php:fpm
     container_name: post_php
     networks:
-      - post_backend
-      - post_frontend
+      - posts_backend
+      - posts_frontend
   posts_nginx:
     image: nginx:stable
     container_name: posts_nginx
