--- a/users/docker-compose.yml
+++ b/users/docker-compose.yml
@@ -13,11 +13,13 @@ services:
     depends_on:
       - users_nginx
   users_php:
-    image: php:fpm
-    container_name: users_php
+    build: ./php
+    container_name: user_php
     networks:
-      - users_frontend
       - users_backend
+      - users_frontend
+    volumes:
+      - ./static/:/var/www/
   users_nginx:
     image: nginx:stable
     container_name: users_nginx
@@ -25,7 +27,7 @@ services:
       - 8088:80
     volumes:
       - ./static:/var/www/
-      - ./nginx/:/etc/nginx/conf.d/
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - users_frontend
     depends_on:
