--- a/posts/nginx/default.conf
+++ b/posts/nginx/default.conf
@@ -2,17 +2,13 @@ server {
     listen       80 default_server;
     listen       [::]:80 default_server;
 
-    server_name php-docker.local;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-    server_name localhost;
+    server_name _;
 
     root /var/www;
     index index.html index.php;
 
     location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        try_files $uri = 404;
         fastcgi_pass posts_php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
