--- a/users/php/Dockerfile
+++ b/users/php/Dockerfile
@@ -1,8 +1,6 @@
 FROM php:fpm
 
-RUN apt-get update
+RUN apt update & apt upgrade
 
-# Install Postgre PDO
-RUN apt-get install -y libpq-dev \
-    && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
-    && docker-php-ext-install pdo pdo_pgsql pgsql
+# Install Postgres PDO
+RUN docker-php-ext-install pdo pdo_mysql pdo_pgsql
