--- a/users/php/Dockerfile
+++ b/users/php/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:fpm
 
-RUN apt update & apt upgrade
+RUN apt update && apt upgrade
 
-# Install Postgres PDO
+# Install Postgres PDO drivers
 RUN docker-php-ext-install pdo pdo_mysql pdo_pgsql
