--- a/auth/docker-compose.yml
+++ b/auth/docker-compose.yml
@@ -15,6 +15,8 @@ services:
   auth_php:
     build: ./php
     container_name: auth_php
+    volumes:
+      - ./static/:/var/www/
     networks:
       - auth_frontend
       - auth_backend
