--- a/users/php/Dockerfile
+++ b/users/php/Dockerfile
@@ -1,6 +1,7 @@
 FROM php:fpm
 
 RUN apt-get update && apt-get upgrade -y
+RUN apt-get install -y libpq-dev
 
 # Install Postgres PDO drivers
-RUN docker-php-ext-install pdo pdo_mysql pdo_pgsql
+RUN docker-php-ext-install pdo_mysql pdo_pgsql
