--- a/reactions/nginx/default.conf
+++ b/reactions/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen       80 default_server;
     listen       [::]:80 default_server;
 
-    server_name localhost;
+    server_name _;
 
     root /var/www;
     index index.html index.php;
@@ -11,5 +11,8 @@ server {
         try_files $uri = 404;
         fastcgi_pass reactions_php:9000;
         fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
