--- a/users/php/Dockerfile
+++ b/users/php/Dockerfile
@@ -1,7 +1,8 @@
 FROM php:fpm
 
-RUN apt-get update && apt-get upgrade -y
-RUN apt-get install -y libpq-dev
+RUN apt-get update
 
-# Install Postgres PDO drivers
-RUN docker-php-ext-install pdo_mysql pdo_pgsql
+# Install Postgre PDO
+RUN apt-get install -y libpq-dev \
+    && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
+    && docker-php-ext-install pdo pdo_pgsql pgsql
