--- a/reactions/docker-compose.yml
+++ b/reactions/docker-compose.yml
@@ -13,11 +13,13 @@ services:
     depends_on:
       - reactions_nginx
   reactions_php:
-    image: php:fpm
+    build: ./php
     container_name: reactions_php
     networks:
       - reactions_frontend
       - reactions_backend
+    volumes:
+      - ./static/:/var/www/
   reactions_nginx:
     image: nginx:stable
     container_name: reactions_nginx
@@ -25,7 +27,7 @@ services:
       - 8086:80
     volumes:
       - ./static:/var/www/
-      - ./nginx/:/etc/nginx/conf.d/
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - reactions_frontend
     depends_on:
