--- a/groupes/docker-compose.yml
+++ b/groupes/docker-compose.yml
@@ -13,11 +13,13 @@ services:
     depends_on:
       - groupes_nginx
   groupes_php:
-    image: php:fpm
+    build: ./php
     container_name: groupes_php
     networks:
       - groupes_frontend
       - groupes_backend
+    volumes:
+      - ./static/:/var/www/
   groupes_nginx:
     image: nginx:stable
     container_name: groupes_nginx
@@ -25,7 +27,7 @@ services:
       - 8083:80
     volumes:
       - ./static:/var/www/
-      - ./nginx/:/etc/nginx/conf.d/
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - groupes_frontend
     depends_on:
