--- a/relations/docker-compose.yml
+++ b/relations/docker-compose.yml
@@ -13,11 +13,13 @@ services:
     depends_on:
       - relations_nginx
   relations_php:
-    image: php:fpm
+    build: ./php
     container_name: relations_php
     networks:
       - relations_frontend
       - relations_backend
+    volumes:
+      - ./static/:/var/www/
   relations_nginx:
     image: nginx:stable
     container_name: relations_nginx
@@ -25,7 +27,7 @@ services:
       - 8087:80
     volumes:
       - ./static:/var/www/
-      - ./nginx/:/etc/nginx/conf.d/
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - relations_frontend
     depends_on:
