fixed body size limit

--- a/images/nginx/default.conf
+++ b/images/nginx/default.conf
@@ -6,6 +6,7 @@ server {
 
     root /var/www;
     index index.html index.php;
+    client_max_body_size 2M;
 
     location ~ \.php$ {
         try_files $uri = 404;
